--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: #162028;
+  font-size: 14px;
+  font-family: CoreSans, sans-serif;
+  font-weight: 500;
+  line-height: 21px;
+  letter-spacing: 0;
+  background: #000;
 }
 
 code {
