--- a/src/components/MainPage/style/Hero.css
+++ b/src/components/MainPage/style/Hero.css
@@ -1,4 +1,10 @@
-.backgroundImage {
+.hero-container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.hero-container .backgroundImage {
   height: 100%;
   width: 100%;
   top: 0px;
@@ -10,10 +16,37 @@
   transform: scale(1);
   transform-origin: center center 0px;
   transition: opacity 1s ease-in-out 0s;
+}
+
+.hero-container .searchAddress {
+  z-index: 1;
+  position: relative;
+  margin-top: 25vh;
+}
+
+.hero-container .searchAddress .text {
+  text-shadow: rgba(23, 32, 38, 0.2) 0px 2px 10px, rgba(23, 32, 38, 0.2) 0px 2px 4px;
+  pointer-events: none;
+  margin-bottom: 20px;
+  padding: 0px 20px;
+  position: relative;
   z-index: 2;
 }
 
-.find {
+.hero-container .searchAddress .text h1 {
+  font-weight: 600;
+  max-width: 100%;
+  color: white;
+  text-transform: uppercase;
+  margin-bottom: 0.35em;
+  text-align: center;
+  font-size: 56px;
+  line-height: 1.3;
+  letter-spacing: 0.5px;
+  margin: 0;
+}
+
+.hero-container .searchAddress .find {
   max-width: 100%;
   min-height: 60px;
   height: 60px;
@@ -29,11 +62,11 @@
   border-radius: 0 0 4px 4px;
 }
 
-.find :hover {
+.hero-container .searchAddress .find :hover {
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
-.find .findText {
+.hero-container .searchAddress .find .findText {
   width: 100%;
   display: inherit;
   align-items: inherit;
