--- a/src/components/MainPage/style/Navbar.scss
+++ b/src/components/MainPage/style/Navbar.scss
@@ -63,6 +63,7 @@
         height: 25px;
         width: 25px;
         margin-right: 16px;
+        cursor: pointer;
 
         svg {
           border: 2px solid white;
