--- a/src/components/MainPage/style/Hero.css
+++ b/src/components/MainPage/style/Hero.css
@@ -18,13 +18,15 @@
   transition: opacity 1s ease-in-out 0s;
 }
 
-.hero-container .searchAddress {
+.hero-container .centerMenu {
   z-index: 1;
   position: relative;
-  margin-top: 25vh;
+  margin: auto;
+  width: 100%;
+  max-width: 830px;
 }
 
-.hero-container .searchAddress .text {
+.hero-container .centerMenu .text {
   text-shadow: rgba(23, 32, 38, 0.2) 0px 2px 10px, rgba(23, 32, 38, 0.2) 0px 2px 4px;
   pointer-events: none;
   margin-bottom: 20px;
@@ -33,7 +35,7 @@
   z-index: 2;
 }
 
-.hero-container .searchAddress .text h1 {
+.hero-container .centerMenu .text h1 {
   font-weight: 600;
   max-width: 100%;
   color: white;
@@ -46,11 +48,95 @@
   margin: 0;
 }
 
-.hero-container .searchAddress .find {
+.hero-container .centerMenu .searchMenu {
+  align-items: center;
+  background: #fff;
+  border-radius: 4px 4px 0 0;
+  display: flex;
+  height: 72px;
+  position: relative;
+}
+
+.hero-container .centerMenu .searchMenu div .searchIcon {
+  cursor: pointer;
+  pointer-events: none;
+  position: absolute;
+  margin: auto 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  height: 36px;
+  padding-left: 16px;
+  padding-right: 19px;
+  height: 36px;
+  width: 36px;
+}
+
+.hero-container .centerMenu .searchMenu form input {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 28px;
+  letter-spacing: 0;
+  border: 0;
+  color: #162028;
+  overflow: hidden;
+  outline: 0;
+  padding: 0 100px 0 74px;
+  text-overflow: ellipsis;
+  width: 100%;
+  background: transparent;
+  min-height: 72px;
+}
+
+.hero-container .centerMenu .searchMenu .currentLocation {
+  align-items: center;
+  border-left: 1px solid #f1f2f4;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  position: absolute;
+  margin: auto 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 76px;
+}
+
+.hero-container .centerMenu .searchMenu .currentLocation button {
   max-width: 100%;
+  min-height: 42px;
+  min-width: 64px;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  cursor: pointer;
+  display: inline-flex;
+  outline: 0;
+  padding: 0;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+}
+
+.hero-container .centerMenu .searchMenu .currentLocation button .currentIcon {
+  height: 36px;
+  width: 36px;
+}
+
+.hero-container .centerMenu .findRestaurantsInYourArea :hover {
+  background-color: #aa4c00;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+}
+
+.hero-container .centerMenu .findRestaurantsInYourArea button {
+  width: 100%;
   min-height: 60px;
   height: 60px;
-  background-color: #aa4c00;
+  border-radius: 0 0 4px 4px;
+  color: white;
+  background-color: #f36d00;
   text-align: center;
   font-weight: 600;
   line-height: 1.3;
@@ -59,16 +145,11 @@
   border-radius: 0;
   letter-spacing: 1px;
   padding-bottom: 0;
-  border-radius: 0 0 4px 4px;
-}
-
-.hero-container .searchAddress .find :hover {
-  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
-}
-
-.hero-container .searchAddress .find .findText {
-  width: 100%;
-  display: inherit;
-  align-items: inherit;
-  justify-content: inherit;
+  min-width: 64px;
+  box-sizing: border-box;
+  text-transform: uppercase;
+  border: 0;
+  cursor: pointer;
+  margin: 0;
+  outline: 0;
 }
