--- a/src/components/MainPage/style/Benefits.scss
+++ b/src/components/MainPage/style/Benefits.scss
@@ -3,17 +3,63 @@
   position: relative;
 
   div {
-    flex-direction: row;
-    // transition: all 0s ease 0s;
-    // direction: ltr;
+    // justify-content: start;
     display: flex;
-    // will-change: transform;
-    // transform: translate(-100%);
-  }
+    // justify-content: space-between;
 
-  .slide1 {
-    // background-image: url('/images/more-choice_desktop.jpg');
-    width: 510px;
-    height: 500px;
+    // flex: 1;
+
+    .text1 {
+      flex-grow: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      div {
+        z-index: 2;
+        max-width: 301px;
+        flex-direction: column;
+
+        h2 {
+          font-weight: 500;
+          font-size: 32px;
+          line-height: 1.3;
+          letter-spacing: 0.5px;
+          text-shadow: 0 2px 4px 0 rgba(23, 32, 38, 0.2);
+          // margin-top: 210px;
+          margin-bottom: 24px;
+        }
+
+        div {
+          font-family: CoreSans, sans-serif;
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 21px;
+          letter-spacing: 0.00938em;
+          color: #5e6b77;
+        }
+      }
+    }
+
+    .slide1 {
+      width: 510px;
+      height: 500px;
+      z-index: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+
+      .diagonal {
+        width: 600px;
+        height: 1000px;
+        top: 0;
+        position: absolute;
+        background: #fff;
+        transform: rotate(10deg) translate(-550px, -50px);
+      }
+    }
   }
 }
