Fixed hero page design

--- a/src/components/MainPage/style/Navbar.css
+++ b/src/components/MainPage/style/Navbar.css
@@ -1,36 +1,27 @@
 .navbar-container {
   z-index: 3;
-}
-
-.navbar-container div {
   background-color: transparent;
-  width: 100%;
-  height: 72px;
+  height: 90px;
   display: flex;
-  padding: 0 4px 0 16px;
-  z-index: 2;
+  margin: 0 15px 0 45px;
   align-items: center;
   justify-content: space-between;
 }
 
-.navbar-container div .logo {
-  width: 100%;
+.navbar-container .logo a svg {
+  filter: drop-shadow(rgba(23, 32, 38, 0.2) 0px 2px 4px);
+}
+
+.navbar-container .menu {
   display: flex;
   align-items: center;
 }
 
-.navbar-container div .logo a svg {
-  filter: drop-shadow(rgba(23, 32, 38, 0.2) 0px 2px 4px);
-}
-
-.navbar-container div .menu {
-  justify-content: end;
-}
-
-.navbar-container div .menu .needHelp {
+.navbar-container .menu .needHelp {
   background-color: transparent;
   border: none;
   display: flex;
+  flex-direction: row;
   font-weight: 600;
   letter-spacing: 1px;
   text-align: center;
@@ -39,33 +30,35 @@
   cursor: pointer;
 }
 
-.navbar-container div .menu .needHelp .icon {
+.navbar-container .menu .needHelp .icon {
   height: 25px;
   width: 25px;
 }
 
-.navbar-container div .menu .needHelp .text {
+.navbar-container .menu .needHelp .text {
   padding-left: 10px;
   color: #fff;
   height: 25px;
   width: 110px;
   font-size: 15px;
   text-transform: uppercase;
+  display: flex;
+  align-items: center;
 }
 
-.navbar-container div .menu .country {
+.navbar-container .menu .country {
   height: 25px;
   width: 25px;
-  margin-right: 16px;
+  margin-right: 25px;
   cursor: pointer;
 }
 
-.navbar-container div .menu .country svg {
+.navbar-container .menu .country svg {
   border: 2px solid white;
   border-radius: 20px;
 }
 
-.navbar-container div .menu .divider {
+.navbar-container .menu .divider {
   align-self: normal;
   padding-right: 8px;
   border-left: 1px solid #f1f2f4;
@@ -73,7 +66,7 @@
   opacity: 0.3;
 }
 
-.navbar-container div .menu .login {
+.navbar-container .menu .login {
   background-color: transparent;
   border: none;
   display: flex;
@@ -86,7 +79,7 @@
   align-items: center;
 }
 
-.navbar-container div .menu .login .icon {
+.navbar-container .menu .login .icon {
   background: white none repeat scroll 0% 0%;
   border-radius: 50%;
   box-shadow: rgba(23, 32, 38, 0.07) 0px 1px 1px 0px, rgba(23, 32, 38, 0.06) 0px 2px 1px -1px, rgba(23, 32, 38, 0.1) 0px 1px 3px 0px;
@@ -96,7 +89,7 @@
   height: 35px;
 }
 
-.navbar-container div .menu .login .icon img {
+.navbar-container .menu .login .icon img {
   background-size: cover;
   border-radius: 50%;
   border: 1px solid #f1f2f4;
@@ -104,12 +97,11 @@
   width: 100%;
 }
 
-.navbar-container div .menu .login .text {
+.navbar-container .menu .login .text {
   text-shadow: 0px 2px 4px rgba(23, 32, 38, 0.2);
   white-space: nowrap;
-  padding-left: 10px;
   color: #fff;
-  width: 100px;
+  margin: 0 10px;
   font-size: 15px;
   text-transform: uppercase;
 }
