--- a/src/components/MainPage/style/Hero.css
+++ b/src/components/MainPage/style/Hero.css
@@ -5,10 +5,12 @@
 }
 
 .hero-container .backgroundImage {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   top: 0px;
   left: 0px;
+  right: 0px;
+  right: 0px;
   object-fit: cover;
   position: absolute;
   overflow: hidden;
@@ -24,15 +26,16 @@
   margin: auto;
   width: 100%;
   max-width: 830px;
+  transform: translateY(-50px);
 }
 
 .hero-container .centerMenu .text {
   text-shadow: rgba(23, 32, 38, 0.2) 0px 2px 10px, rgba(23, 32, 38, 0.2) 0px 2px 4px;
   pointer-events: none;
   margin-bottom: 20px;
-  padding: 0px 20px;
   position: relative;
   z-index: 2;
+  padding: 20px;
 }
 
 .hero-container .centerMenu .text h1 {
@@ -132,7 +135,6 @@
 
 .hero-container .centerMenu .findRestaurantsInYourArea button {
   width: 100%;
-  min-height: 60px;
   height: 60px;
   border-radius: 0 0 4px 4px;
   color: white;
@@ -140,16 +142,16 @@
   text-align: center;
   font-weight: 600;
   line-height: 1.3;
-  padding-top: 0;
   white-space: normal;
-  border-radius: 0;
   letter-spacing: 1px;
-  padding-bottom: 0;
   min-width: 64px;
-  box-sizing: border-box;
   text-transform: uppercase;
   border: 0;
   cursor: pointer;
   margin: 0;
   outline: 0;
+}
+
+.hero-container .centerMenu .findRestaurantsInYourArea button span {
+  font-size: 0.9375rem;
 }
