--- a/src/components/MainPage/style/Hero.scss
+++ b/src/components/MainPage/style/Hero.scss
@@ -4,10 +4,12 @@
   height: 100vh;
 
   .backgroundImage {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     top: 0px;
     left: 0px;
+    right: 0px;
+    right: 0px;
     object-fit: cover;
     position: absolute;
     overflow: hidden;
@@ -23,15 +25,17 @@
     margin: auto;
     width: 100%;
     max-width: 830px;
+    transform: translateY(-50px);
 
     .text {
       text-shadow: rgba(23, 32, 38, 0.2) 0px 2px 10px,
         rgba(23, 32, 38, 0.2) 0px 2px 4px;
       pointer-events: none;
       margin-bottom: 20px;
-      padding: 0px 20px;
+      // padding: 0px 50px;
       position: relative;
       z-index: 2;
+      padding: 20px;
 
       h1 {
         font-weight: 600;
@@ -139,7 +143,6 @@
 
       button {
         width: 100%;
-        min-height: 60px;
         height: 60px;
         border-radius: 0 0 4px 4px;
         color: rgba(255, 255, 255, 1);
@@ -147,18 +150,18 @@
         text-align: center;
         font-weight: 600;
         line-height: 1.3;
-        padding-top: 0;
         white-space: normal;
-        border-radius: 0;
         letter-spacing: 1px;
-        padding-bottom: 0;
         min-width: 64px;
-        box-sizing: border-box;
         text-transform: uppercase;
         border: 0;
         cursor: pointer;
         margin: 0;
         outline: 0;
+
+        span {
+          font-size: 0.9375rem;
+        }
       }
     }
   }
