--- a/src/components/MainPage/style/Navbar.scss
+++ b/src/components/MainPage/style/Navbar.scss
@@ -1,125 +1,112 @@
 .navbar-container {
   z-index: 3;
+  background-color: transparent;
+  height: 90px;
+  display: flex;
+  margin: 0 15px 0 45px;
+  align-items: center;
+  justify-content: space-between;
 
-  div {
-    background-color: transparent;
-    width: 100%;
-    height: 72px;
-    display: flex;
-    padding: 0 4px 0 16px;
-    z-index: 2;
-    align-items: center;
-    justify-content: space-between;
-
-    // @media screen and (max-width: 960px) {
-    //   height: 90px;
-    //   padding: 0 45px;
-    // }
-
-    .logo {
-      width: 100%;
-      display: flex;
-      align-items: center;
-
-      a {
-        svg {
-          filter: drop-shadow(rgba(23, 32, 38, 0.2) 0px 2px 4px);
-        }
+  .logo {
+    a {
+      svg {
+        filter: drop-shadow(rgba(23, 32, 38, 0.2) 0px 2px 4px);
       }
-
-      // @media screen and (max-width: 960px) {
-      //   width: unset;
-      // }
     }
+  }
 
-    .menu {
-      justify-content: end;
+  .menu {
+    display: flex;
+    align-items: center;
 
-      .needHelp {
-        background-color: transparent;
-        border: none;
-        display: flex;
-        font-weight: 600;
-        letter-spacing: 1px;
-        text-align: center;
-        line-height: 1.3;
-        white-space: normal;
-        cursor: pointer;
+    .needHelp {
+      background-color: transparent;
+      border: none;
+      display: flex;
+      flex-direction: row;
+      font-weight: 600;
+      letter-spacing: 1px;
+      text-align: center;
+      line-height: 1.3;
+      white-space: normal;
+      cursor: pointer;
 
-        .icon {
-          height: 25px;
-          width: 25px;
-        }
-        .text {
-          padding-left: 10px;
-          color: #fff;
-          height: 25px;
-          width: 110px;
-          font-size: 15px;
-          text-transform: uppercase;
-        }
-      }
-      .country {
+      .icon {
         height: 25px;
         width: 25px;
-        margin-right: 16px;
-        cursor: pointer;
-
-        svg {
-          border: 2px solid white;
-          border-radius: 20px;
-        }
       }
 
-      .divider {
-        align-self: normal;
-        padding-right: 8px;
-        border-left: 1px solid rgb(241, 242, 244);
+      .text {
+        padding-left: 10px;
         color: #fff;
-        opacity: 0.3;
+        height: 25px;
+        width: 110px;
+        font-size: 15px;
+        text-transform: uppercase;
+        display: flex;
+        align-items: center;
+      }
+    }
+    .country {
+      height: 25px;
+      width: 25px;
+      margin-right: 25px;
+      cursor: pointer;
+
+      svg {
+        border: 2px solid white;
+        border-radius: 20px;
+      }
+    }
+
+    .divider {
+      align-self: normal;
+      padding-right: 8px;
+      border-left: 1px solid rgb(241, 242, 244);
+      color: #fff;
+      opacity: 0.3;
+    }
+
+    .login {
+      background-color: transparent;
+      border: none;
+      display: flex;
+      font-weight: 600;
+      letter-spacing: 1px;
+      text-align: center;
+      line-height: 1.3;
+      white-space: normal;
+      cursor: pointer;
+      align-items: center;
+
+      .icon {
+        background: rgb(255, 255, 255) none repeat scroll 0% 0%;
+        border-radius: 50%;
+        box-shadow: rgba(23, 32, 38, 0.07) 0px 1px 1px 0px,
+          rgba(23, 32, 38, 0.06) 0px 2px 1px -1px,
+          rgba(23, 32, 38, 0.1) 0px 1px 3px 0px;
+        padding: 2px;
+        position: relative;
+        width: 35px;
+        height: 35px;
+
+        img {
+          background-size: cover;
+          border-radius: 50%;
+          border: 1px solid rgb(241, 242, 244);
+          height: 100%;
+          width: 100%;
+        }
       }
 
-      .login {
-        background-color: transparent;
-        border: none;
-        display: flex;
-        font-weight: 600;
-        letter-spacing: 1px;
-        text-align: center;
-        line-height: 1.3;
-        white-space: normal;
-        cursor: pointer;
-        align-items: center;
-
-        .icon {
-          background: rgb(255, 255, 255) none repeat scroll 0% 0%;
-          border-radius: 50%;
-          box-shadow: rgba(23, 32, 38, 0.07) 0px 1px 1px 0px,
-            rgba(23, 32, 38, 0.06) 0px 2px 1px -1px,
-            rgba(23, 32, 38, 0.1) 0px 1px 3px 0px;
-          padding: 2px;
-          position: relative;
-          width: 35px;
-          height: 35px;
-
-          img {
-            background-size: cover;
-            border-radius: 50%;
-            border: 1px solid rgb(241, 242, 244);
-            height: 100%;
-            width: 100%;
-          }
-        }
-
-        .text {
-          text-shadow: 0px 2px 4px rgba(23, 32, 38, 0.2);
-          white-space: nowrap;
-          padding-left: 10px;
-          color: #fff;
-          width: 100px;
-          font-size: 15px;
-          text-transform: uppercase;
-        }
+      .text {
+        text-shadow: 0px 2px 4px rgba(23, 32, 38, 0.2);
+        white-space: nowrap;
+        color: #fff;
+        // width: 100px;
+        margin: 0 10px;
+        font-size: 15px;
+        text-transform: uppercase;
       }
     }
   }
