--- a/src/components/MainPage/style/SkipRewards.css
+++ b/src/components/MainPage/style/SkipRewards.css
@@ -1,102 +1,64 @@
 .skipRewards-container {
-  position: relative;
-  width: 100%;
-  height: auto;
-}
-
-.skipRewards-container section {
-  background-color: #ffead4;
-  position: relative;
   overflow: hidden;
-}
-
-.skipRewards-container section div {
-  height: 540px;
   position: relative;
-  width: 100%;
-  display: flex;
-  max-width: 1200px;
-  margin: 0px auto;
 }
 
-.skipRewards-container section div div {
-  max-width: 500px;
-  padding: 0px 16px;
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  z-index: 1;
-  margin-left: 55%;
-}
-
-.skipRewards-container section div div .column1 {
-  background-position: unset;
-  height: 540px;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  background-repeat: no-repeat;
-  max-width: 1010px;
-  width: 80%;
-}
-
-.skipRewards-container section div div .column1 .photo {
-  background-position: unset;
-  height: 540px;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 540px;
-  background-repeat: no-repeat;
-  max-width: 1010px;
-  width: 80%;
-}
-
-@media screen and (max-width: 960px) {
-  .skipRewards-container section div div .column1 .photo {
-    height: 245px;
-  }
-}
-
-.skipRewards-container section div div .column1 .photo div {
-  right: 0px;
-  margin-top: -500px;
-  margin-right: -280px;
-  top: 50%;
-  transform: rotate(16deg);
-  width: 500px;
-  bottom: 100%;
-  position: absolute;
-  height: 1000px;
-  right: -100px;
-  transform: rotate(-4deg);
-  transform-origin: 100% 0px 0px;
+.skipRewards-container div {
   background-color: #ffead4;
+  display: flex;
 }
 
-.skipRewards-container section div div .column2 {
+.skipRewards-container div .photo {
+  flex-grow: 1;
+  width: 980px;
+  height: 540px;
+  z-index: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin-right: 245px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.skipRewards-container div .photo .diagonal {
+  width: 600px;
+  height: 800px;
+  top: 0;
+  position: absolute;
+  background: #ffead4;
+  transform: rotate(10deg) translate(600px, -200px);
+}
+
+.skipRewards-container div .text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.skipRewards-container div .text div {
+  z-index: 2;
+  max-width: 301px;
+  flex-direction: column;
+}
+
+.skipRewards-container div .text div .rewards-icon {
   margin: 0px 0px 20px;
   height: 30px;
 }
 
-.skipRewards-container section div div .column2 .rewards-icon {
-  margin: 0px 0px 20px;
-  height: 30px;
-}
-
-.skipRewards-container section div div .column2 .rewards-icon svg {
+.skipRewards-container div .text div .rewards-icon svg {
   fill: #ff8000;
   width: inherit;
   height: inherit;
 }
 
-.skipRewards-container section div div .column2 .rewards-text {
+.skipRewards-container div .text div .rewards-text {
   margin-bottom: 32px;
 }
 
-.skipRewards-container section div div .column2 .rewards-text p {
+.skipRewards-container div .text div .rewards-text p {
   max-width: 100%;
   padding: 0px;
   text-align: left;
@@ -108,12 +70,12 @@
   letter-spacing: 0;
 }
 
-.skipRewards-container section div div .column2 .learn-more :hover {
+.skipRewards-container div .text div .learn-more :hover {
   background-color: #aa4c00;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 
-.skipRewards-container section div div .column2 .learn-more a {
+.skipRewards-container div .text div .learn-more a {
   height: 60px;
   border-radius: 4px;
   text-align: center;
@@ -141,7 +103,7 @@
   text-decoration: none;
 }
 
-.skipRewards-container section div div .column2 .learn-more a span {
+.skipRewards-container div .text div .learn-more a span {
   font-size: 0.9375rem;
   color: white;
   text-transform: uppercase;
