--- a/src/components/MainPage/style/DownloadOurApp.css
+++ b/src/components/MainPage/style/DownloadOurApp.css
@@ -1,1 +1,83 @@
-/* No CSS */
+.downloadourapp-container {
+  overflow: hidden;
+  position: relative;
+  height: 564px;
+}
+
+.downloadourapp-container div {
+  background-color: #111b22;
+  display: flex;
+}
+
+.downloadourapp-container div .photo {
+  width: 0;
+  height: 530px;
+  padding-top: 95px;
+}
+
+.downloadourapp-container div .photo img {
+  z-index: 3;
+  transform: translateX(13vw);
+}
+
+.downloadourapp-container div .leftBackground {
+  width: 570px;
+  max-width: 690px;
+  z-index: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #0c151d;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  clip-path: polygon(0 0, 100% 0, 70% 100%, 0% 100%);
+}
+
+.downloadourapp-container div .text {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  color: #fff;
+}
+
+.downloadourapp-container div .text div {
+  max-width: 275px;
+  flex-direction: column;
+}
+
+.downloadourapp-container div .text div .download-title {
+  font-size: 32px;
+  font-family: CoreSans, sans-serif;
+  font-weight: 500;
+  line-height: 1.3;
+  text-shadow: 0 2px 4px 0 rgba(23, 32, 38, 0.2);
+  letter-spacing: 0.5px;
+}
+
+.downloadourapp-container div .text div .download-text {
+  z-index: 2;
+  margin-bottom: 32px;
+}
+
+.downloadourapp-container div .text div .download-text span {
+  font-size: 16px;
+  font-family: CoreSans, sans-serif;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: 0;
+}
+
+.downloadourapp-container div .text div .applink {
+  padding: 6px 0px;
+  justify-content: left;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.downloadourapp-container div .text div .applink a svg {
+  fill: #a6a6a6;
+}
