--- a/src/components/MainPage/style/SkipRewards.css
+++ b/src/components/MainPage/style/SkipRewards.css
@@ -9,65 +9,66 @@
 }
 
 .skipRewards-container div .photo {
-  flex-grow: 1;
-  width: 980px;
+  width: 690px;
+  max-width: 690px;
   height: 540px;
   z-index: 0;
-  right: 0;
+  left: 0;
   top: 0;
   bottom: 0;
-  margin-right: 245px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-}
-
-.skipRewards-container div .photo .diagonal {
-  width: 600px;
-  height: 800px;
-  top: 0;
-  position: absolute;
-  background: #ffead4;
-  transform: rotate(10deg) translate(600px, -200px);
+  clip-path: polygon(0 0, 100% 0, 78% 100%, 0% 100%);
 }
 
 .skipRewards-container div .text {
+  flex-grow: 1;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
 .skipRewards-container div .text div {
-  z-index: 2;
-  max-width: 301px;
+  max-width: 468px;
   flex-direction: column;
 }
 
-.skipRewards-container div .text div .rewards-icon {
+.skipRewards-container div .text div .rewards-title {
   margin: 0px 0px 20px;
   height: 30px;
+  z-index: 2;
+  align-items: start;
 }
 
-.skipRewards-container div .text div .rewards-icon svg {
+.skipRewards-container div .text div .rewards-title svg {
   fill: #ff8000;
   width: inherit;
   height: inherit;
 }
 
 .skipRewards-container div .text div .rewards-text {
+  z-index: 2;
   margin-bottom: 32px;
 }
 
-.skipRewards-container div .text div .rewards-text p {
+.skipRewards-container div .text div .rewards-text span {
   max-width: 100%;
   padding: 0px;
   text-align: left;
   font-size: 16px;
   font-weight: 500;
+  margin-top: 0px;
   margin-bottom: 10px;
   transition: none;
   line-height: 21px;
   letter-spacing: 0;
+}
+
+.skipRewards-container div .text div .learn-more {
+  z-index: 2;
+  width: 167.11px;
 }
 
 .skipRewards-container div .text div .learn-more :hover {
@@ -83,7 +84,6 @@
   line-height: 1.3;
   white-space: normal;
   letter-spacing: 1px;
-  padding: 15px 30px 14px;
   font-size: 0.9375rem;
   color: white;
   background-color: #f36d00;
