--- a/src/components/MainPage/style/SkipRewards.scss
+++ b/src/components/MainPage/style/SkipRewards.scss
@@ -19,16 +19,7 @@
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
-
-      .diagonal {
-        width: 200px;
-        height: 1000px;
-        top: 0;
-        position: absolute;
-        z-index: 1;
-        background: rgb(255, 234, 212);
-        transform: rotate(15deg) translate(520px, -250px);
-      }
+      clip-path: polygon(0 0, 100% 0, 78% 100%, 0% 100%);
     }
 
     .text {
@@ -36,6 +27,7 @@
       display: flex;
       // justify-content: center;
       align-items: center;
+      justify-content: center;
       position: relative;
 
       div {
