--- a/src/components/MainPage/style/DownloadOurApp.scss
+++ b/src/components/MainPage/style/DownloadOurApp.scss
@@ -67,6 +67,7 @@
           line-height: 1.3;
           text-shadow: 0 2px 4px 0 rgba(23, 32, 38, 0.2);
           letter-spacing: 0.5px;
+          margin-bottom: 20px;
         }
 
         .download-text {
@@ -89,10 +90,11 @@
           flex-direction: row;
           align-items: center;
 
-          a {
-            svg {
-              fill: #a6a6a6;
-            }
+          a img {
+            width: 160px;
+            height: 40px;
+            object-fit: cover;
+            // overflow: hidden;
           }
         }
       }
