--- a/src/components/MainPage/style/Cards.css
+++ b/src/components/MainPage/style/Cards.css
@@ -1,1 +1,87 @@
-/* No CSS */
+.cards-container {
+  height: 563px;
+  background-color: #f9fafb;
+}
+
+.cards-container div {
+  display: flex;
+  justify-content: center;
+}
+
+.cards-container div .card {
+  margin: 64px 16px;
+  text-align: left;
+}
+
+.cards-container div .card div {
+  flex-direction: column;
+  max-width: 314px;
+  border-radius: 8px;
+  background-color: #fff;
+  overflow: hidden;
+  position: relative;
+}
+
+.cards-container div .card div img {
+  border-radius: 8px 8px 0 0;
+  width: 100%;
+  height: 180px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  position: relative;
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
+}
+
+.cards-container div .card div div {
+  padding: 32px;
+  text-align: left;
+  border-bottom: 1px solid #f1f2f4;
+}
+
+.cards-container div .card div div h3 {
+  font-size: 20px;
+  font-family: CoreSans, sans-serif;
+  font-weight: 500;
+  letter-spacing: 0;
+  transition: none;
+  max-width: 100%;
+  padding-bottom: 2px;
+  margin: 0;
+}
+
+.cards-container div .card div div p {
+  max-width: 100%;
+  transition: none;
+  color: #5e6b77;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  letter-spacing: 0.00938em;
+}
+
+.cards-container div .card div button {
+  width: 100%;
+  height: 55px;
+  font-weight: 600;
+  line-height: 1.3;
+  letter-spacing: 1px;
+  padding: 6px 8px;
+  padding-bottom: 0;
+  border: 0;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+}
+
+.cards-container div .card div button :hover {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+}
+
+.cards-container div .card div button a {
+  font-size: 15px;
+  color: #5e6b77;
+  text-decoration: none;
+  text-transform: uppercase;
+}
