--- a/src/components/MainPage/style/DownloadOurApp.css
+++ b/src/components/MainPage/style/DownloadOurApp.css
@@ -55,11 +55,12 @@
   line-height: 1.3;
   text-shadow: 0 2px 4px 0 rgba(23, 32, 38, 0.2);
   letter-spacing: 0.5px;
+  margin-bottom: 20px;
 }
 
 .downloadourapp-container div .text div .download-text {
   z-index: 2;
-  margin-bottom: 32px;
+  margin-bottom: 18px;
 }
 
 .downloadourapp-container div .text div .download-text span {
@@ -72,12 +73,14 @@
 
 .downloadourapp-container div .text div .applink {
   padding: 6px 0px;
-  justify-content: left;
+  justify-content: space-between;
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: 285px;
 }
 
-.downloadourapp-container div .text div .applink a svg {
-  fill: #a6a6a6;
+.downloadourapp-container div .text div .applink a img {
+  width: 123.2px;
+  height: 39.98px;
 }
