--- a/src/components/MainPage/style/Cards.css
+++ b/src/components/MainPage/style/Cards.css
@@ -75,7 +75,8 @@
   background-color: transparent;
 }
 
-.cards-container div .card div button :hover {
+.cards-container div .card div button:hover {
+  background-color: #f2f2f2;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 
