--- a/src/components/MainPage/style/Cards.scss
+++ b/src/components/MainPage/style/Cards.scss
@@ -70,7 +70,8 @@
           justify-content: center;
           background-color: transparent;
 
-          :hover {
+          &:hover {
+            background-color: #f2f2f2;
             transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
               box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
               border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
