--- a/src/components/MainPage/style/Footer.scss
+++ b/src/components/MainPage/style/Footer.scss
@@ -10,16 +10,16 @@
     position: relative;
     width: 100%;
 
-    div {
+    .top-links {
       max-width: 936px;
       margin: 0px auto !important;
+      padding-top: 100px;
 
       div {
         margin: 84px auto 0px;
-        max-width: none;
         display: flex;
         flex-direction: row;
-        padding: 16px 0px;
+        margin: 0;
         width: 100%;
 
         .siteLinks {
@@ -27,7 +27,6 @@
           flex-flow: row wrap;
           justify-content: left;
           flex: 1 1 auto;
-          display: flex;
 
           div {
             padding: 10px 0px;
@@ -106,21 +105,17 @@
                 div {
                   padding: 0px 0px 0px 8px;
 
-                  div {
+                  svg {
                     height: 20px;
                     width: 20px;
-
-                    svg {
-                      height: 20px;
-                      width: 20px;
-                      pointer-events: none;
-                      fill: currentColor;
-                      display: inline-block;
-                      font-size: 1.5rem;
-                      transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-                      flex-shrink: 0;
-                    }
+                    pointer-events: none;
+                    fill: currentColor;
+                    display: inline-block;
+                    font-size: 1.5rem;
+                    transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+                    flex-shrink: 0;
                   }
+                  // }
                 }
               }
             }
@@ -132,29 +127,110 @@
             display: flex;
             justify-content: center;
 
-            div {
-              a {
-                color: rgb(13, 70, 150);
-                text-decoration: none;
-                font-size: 14px;
-                font-weight: 400;
-                cursor: pointer;
-                line-height: 21px;
+            a {
+              color: rgb(13, 70, 150);
+              text-decoration: none;
+              font-size: 14px;
+              font-weight: 400;
+              cursor: pointer;
+              line-height: 21px;
+              margin: 10px;
 
-                div {
-                  height: 24px;
-                  width: 24px;
-
-                  svg {
-                    fill: #fff;
-                    height: 24px;
-                    width: 24px;
-                    pointer-events: none;
-                  }
-                }
+              svg {
+                fill: #fff;
+                height: 24px;
+                width: 24px;
+                pointer-events: none;
               }
             }
           }
+        }
+      }
+      .terms {
+        flex-direction: row;
+        max-width: none;
+        margin-top: 33px;
+        padding: 20px 0px 64px;
+        border-top: 1px solid rgb(94, 107, 119);
+
+        a {
+          padding: 0px 5px 0px 0px;
+          text-decoration: none;
+          font-size: 12px;
+          color: white;
+          font-weight: 400;
+          cursor: pointer;
+          line-height: 21px;
+
+          &::after {
+            content: ' | ';
+            white-space: nowrap;
+            color: rgb(94, 107, 119);
+          }
+        }
+
+        .rewardsLink {
+          &::after {
+            content: '';
+          }
+        }
+      }
+    }
+  }
+
+  .bottom {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 0 auto;
+    width: 936px;
+    min-height: 61px;
+
+    .bottomWrapper {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+
+      .select-country {
+        color: #fff;
+        align-items: center;
+
+        // justify-content: center;
+
+        .flag {
+          height: 16px;
+          width: 16px;
+          vertical-align: middle;
+        }
+
+        span {
+          margin-left: 10px;
+        }
+
+        .arrow {
+          fill: #fff;
+          height: 16px;
+          width: 16px;
+          margin-left: 5px;
+          pointer-events: none;
+          vertical-align: middle;
+        }
+      }
+
+      .company-name {
+        color: white;
+        text-align: right;
+        max-width: unset;
+        padding: unset;
+        font-size: 12px;
+        font-weight: 400;
+
+        svg {
+          fill: #5e6b77;
+          height: 10px;
+          width: 10px;
+          pointer-events: none;
+          padding-right: 3px;
         }
       }
     }
