--- a/src/components/MainPage/style/SkipRewards.scss
+++ b/src/components/MainPage/style/SkipRewards.scss
@@ -2,37 +2,55 @@
   overflow: hidden;
   position: relative;
 
-  div {
+  .skipRewards-wrapper {
     background-color: rgb(255, 234, 212);
-    display: flex;
+    display: grid;
+    grid-template-columns: 55vw auto;
+    grid-template-areas: 'col1 col2';
+
+    @media screen and (max-width: 960px) {
+      grid-template-areas: 'col2' 'col1';
+      grid-template-columns: auto;
+    }
 
     .photo {
-      width: 690px;
-      max-width: 690px;
-      // min-width: 690px;
+      grid-area: col1;
+      max-width: 1010px;
       height: 540px;
       z-index: 0;
       left: 0;
       top: 0;
       bottom: 0;
-      // margin-right: 245px;
       background-size: cover;
       background-repeat: no-repeat;
-      background-position: center;
+      background-position: unset;
       clip-path: polygon(0 0, 100% 0, 78% 100%, 0% 100%);
+
+      @media screen and (max-width: 960px) {
+        clip-path: polygon(0 10%, 100% 0%, 100% 100%, 0% 100%);
+        width: auto;
+        max-width: 960px;
+        background-position: center;
+        height: 245px;
+      }
     }
 
     .text {
-      flex-grow: 1;
+      grid-area: col2;
       display: flex;
-      // justify-content: center;
       align-items: center;
       justify-content: center;
       position: relative;
 
+      @media screen and (max-width: 960px) {
+        padding: 0 34px;
+      }
+
       div {
         max-width: 468px;
+        display: flex;
         flex-direction: column;
+        // align-items: center;
 
         .rewards-title {
           margin: 0px 0px 20px;
@@ -40,10 +58,13 @@
           z-index: 2;
           align-items: start;
 
+          @media screen and (max-width: 960px) {
+            align-items: center;
+            margin-top: 52px;
+          }
+
           svg {
             fill: rgb(255, 128, 0);
-            width: inherit;
-            height: inherit;
           }
         }
 
@@ -62,6 +83,10 @@
             transition: none;
             line-height: 21px;
             letter-spacing: 0;
+
+            @media screen and (max-width: 960px) {
+              text-align: center;
+            }
           }
         }
 
@@ -74,6 +99,10 @@
             transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
               box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
               border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+          }
+
+          @media screen and (max-width: 960px) {
+            margin: 0 auto 40px auto;
           }
 
           a {
@@ -90,7 +119,6 @@
             box-shadow: none;
             min-width: 64px;
             box-sizing: border-box;
-
             text-transform: uppercase;
             border: 0;
             cursor: pointer;
