Fixed responsable page of benefits

--- a/src/components/MainPage/style/SkipRewards.scss
+++ b/src/components/MainPage/style/SkipRewards.scss
@@ -15,7 +15,7 @@
 
     .photo {
       grid-area: col1;
-      max-width: 1010px;
+      // max-width: 1010px;
       height: 540px;
       z-index: 0;
       left: 0;
