--- a/src/components/MainPage/style/Benefits.css
+++ b/src/components/MainPage/style/Benefits.css
@@ -3,24 +3,39 @@
   position: relative;
 }
 
-.benefits-container div {
-  display: flex;
+.benefits-container .benefits-wrapper {
+  display: grid;
+  grid-template-columns: 60vw auto;
+  grid-template-areas: 'col1 col2';
 }
 
-.benefits-container div .text1 {
+@media screen and (max-width: 960px) {
+  .benefits-container .benefits-wrapper {
+    grid-template-areas: 'col1' 'col2';
+    grid-template-columns: auto;
+  }
+}
+
+.benefits-container .benefits-wrapper .text1 {
+  grid-area: col1;
   flex-grow: 1;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.benefits-container div .text1 div {
+@media screen and (max-width: 960px) {
+  .benefits-container .benefits-wrapper .text1 {
+    padding: 30px 15px;
+  }
+}
+
+.benefits-container .benefits-wrapper .text1 div {
   z-index: 2;
-  max-width: 301px;
   flex-direction: column;
 }
 
-.benefits-container div .text1 div h2 {
+.benefits-container .benefits-wrapper .text1 div h2 {
   font-weight: 500;
   font-size: 32px;
   line-height: 1.3;
@@ -29,7 +44,7 @@
   margin-bottom: 24px;
 }
 
-.benefits-container div .text1 div div {
+.benefits-container .benefits-wrapper .text1 div div {
   font-family: CoreSans, sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -38,15 +53,25 @@
   color: #5e6b77;
 }
 
-.benefits-container div .slide1 {
-  width: 510px;
+.benefits-container .benefits-wrapper .slide1 {
+  grid-area: col2;
   height: 544px;
   z-index: 0;
-  right: 0;
+  left: 0;
   top: 0;
   bottom: 0;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: unset;
   clip-path: polygon(30% 0, 100% 0, 100% 100%, 0% 100%);
+}
+
+@media screen and (max-width: 960px) {
+  .benefits-container .benefits-wrapper .slide1 {
+    clip-path: polygon(0 10%, 100% 0%, 100% 100%, 0% 100%);
+    width: auto;
+    max-width: 960px;
+    background-position: center;
+    height: 245px;
+  }
 }
