--- a/src/components/MainPage/style/Benefits.scss
+++ b/src/components/MainPage/style/Benefits.scss
@@ -2,22 +2,30 @@
   overflow: hidden;
   position: relative;
 
-  div {
-    // justify-content: start;
-    display: flex;
-    // justify-content: space-between;
+  .benefits-wrapper {
+    display: grid;
+    grid-template-columns: 60vw auto;
+    grid-template-areas: 'col1 col2';
 
-    // flex: 1;
+    @media screen and (max-width: 960px) {
+      grid-template-areas: 'col1' 'col2';
+      grid-template-columns: auto;
+    }
 
     .text1 {
+      grid-area: col1;
       flex-grow: 1;
       display: flex;
       justify-content: center;
       align-items: center;
 
+      @media screen and (max-width: 960px) {
+        padding: 30px 15px;
+      }
+
       div {
         z-index: 2;
-        max-width: 301px;
+        // max-width: 301px;
         flex-direction: column;
 
         h2 {
@@ -42,25 +50,24 @@
     }
 
     .slide1 {
-      width: 510px;
+      grid-area: col2;
       height: 544px;
       z-index: 0;
-      right: 0;
+      left: 0;
       top: 0;
       bottom: 0;
       background-size: cover;
       background-repeat: no-repeat;
-      background-position: center;
+      background-position: unset;
       clip-path: polygon(30% 0, 100% 0, 100% 100%, 0% 100%);
 
-      // .diagonal {
-      //   width: 600px;
-      //   height: 1000px;
-      //   top: 0;
-      //   position: absolute;
-      //   background: #fff;
-      //   transform: rotate(15deg) translate(-550px, -50px);
-      // }
+      @media screen and (max-width: 960px) {
+        clip-path: polygon(0 10%, 100% 0%, 100% 100%, 0% 100%);
+        width: auto;
+        max-width: 960px;
+        background-position: center;
+        height: 245px;
+      }
     }
   }
 }
