--- a/src/components/MainPage/style/Footer.css
+++ b/src/components/MainPage/style/Footer.css
@@ -12,33 +12,34 @@
   width: 100%;
 }
 
-.footer-container .links .test {
+.footer-container .links .top-links {
   max-width: 936px;
   margin: 0px auto !important;
   padding-top: 100px;
 }
 
-.footer-container .links .test div {
+.footer-container .links .top-links div {
+  margin: 84px auto 0px;
   display: flex;
   flex-direction: row;
   margin: 0;
   width: 100%;
 }
 
-.footer-container .links .test div .siteLinks {
+.footer-container .links .top-links div .siteLinks {
   text-align: left;
   flex-flow: row wrap;
   justify-content: left;
   flex: 1 1 auto;
 }
 
-.footer-container .links .test div .siteLinks div {
+.footer-container .links .top-links div .siteLinks div {
   padding: 10px 0px;
   text-align: left;
   width: 50%;
 }
 
-.footer-container .links .test div .siteLinks div a {
+.footer-container .links .top-links div .siteLinks div a {
   color: white;
   text-decoration: none;
   font-size: 14px;
@@ -48,7 +49,7 @@
   text-align: left;
 }
 
-.footer-container .links .test div .socialLinks {
+.footer-container .links .top-links div .socialLinks {
   width: auto;
   padding-top: 0px;
   border-top: unset;
@@ -59,7 +60,7 @@
   justify-content: space-between;
 }
 
-.footer-container .links .test div .socialLinks .invite {
+.footer-container .links .top-links div .socialLinks .invite {
   margin-top: 0px;
   padding: 0px;
   align-self: flex-start;
@@ -67,7 +68,7 @@
   color: white;
 }
 
-.footer-container .links .test div .socialLinks .invite button {
+.footer-container .links .top-links div .socialLinks .invite button {
   max-width: 100%;
   min-height: 42px;
   padding: 0;
@@ -97,7 +98,7 @@
   background-color: transparent;
 }
 
-.footer-container .links .test div .socialLinks .invite button span {
+.footer-container .links .top-links div .socialLinks .invite button span {
   white-space: nowrap;
   width: 100%;
   display: inherit;
@@ -105,11 +106,11 @@
   justify-content: inherit;
 }
 
-.footer-container .links .test div .socialLinks .invite button span div {
+.footer-container .links .top-links div .socialLinks .invite button span div {
   padding: 0px 0px 0px 8px;
 }
 
-.footer-container .links .test div .socialLinks .invite button span div svg {
+.footer-container .links .top-links div .socialLinks .invite button span div svg {
   height: 20px;
   width: 20px;
   pointer-events: none;
@@ -120,14 +121,14 @@
   flex-shrink: 0;
 }
 
-.footer-container .links .test div .socialLinks .socialMedia {
+.footer-container .links .top-links div .socialLinks .socialMedia {
   padding: 0px;
   align-self: flex-end;
   display: flex;
   justify-content: center;
 }
 
-.footer-container .links .test div .socialLinks .socialMedia a {
+.footer-container .links .top-links div .socialLinks .socialMedia a {
   color: #0d4696;
   text-decoration: none;
   font-size: 14px;
@@ -137,9 +138,93 @@
   margin: 10px;
 }
 
-.footer-container .links .test div .socialLinks .socialMedia a svg {
+.footer-container .links .top-links div .socialLinks .socialMedia a svg {
   fill: #fff;
   height: 24px;
   width: 24px;
   pointer-events: none;
+}
+
+.footer-container .links .top-links .terms {
+  flex-direction: row;
+  max-width: none;
+  margin-top: 33px;
+  padding: 20px 0px 64px;
+  border-top: 1px solid #5e6b77;
+}
+
+.footer-container .links .top-links .terms a {
+  padding: 0px 5px 0px 0px;
+  text-decoration: none;
+  font-size: 12px;
+  color: white;
+  font-weight: 400;
+  cursor: pointer;
+  line-height: 21px;
+}
+
+.footer-container .links .top-links .terms a::after {
+  content: ' | ';
+  white-space: nowrap;
+  color: #5e6b77;
+}
+
+.footer-container .links .top-links .terms .rewardsLink::after {
+  content: '';
+}
+
+.footer-container .bottom {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 0 auto;
+  width: 936px;
+  min-height: 61px;
+}
+
+.footer-container .bottom .bottomWrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.footer-container .bottom .bottomWrapper .select-country {
+  color: #fff;
+  align-items: center;
+}
+
+.footer-container .bottom .bottomWrapper .select-country .flag {
+  height: 16px;
+  width: 16px;
+  vertical-align: middle;
+}
+
+.footer-container .bottom .bottomWrapper .select-country span {
+  margin-left: 10px;
+}
+
+.footer-container .bottom .bottomWrapper .select-country .arrow {
+  fill: #fff;
+  height: 16px;
+  width: 16px;
+  margin-left: 5px;
+  pointer-events: none;
+  vertical-align: middle;
+}
+
+.footer-container .bottom .bottomWrapper .company-name {
+  color: white;
+  text-align: right;
+  max-width: unset;
+  padding: unset;
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.footer-container .bottom .bottomWrapper .company-name svg {
+  fill: #5e6b77;
+  height: 10px;
+  width: 10px;
+  pointer-events: none;
+  padding-right: 3px;
 }
