--- a/src/components/MainPage/style/SkipRewards.css
+++ b/src/components/MainPage/style/SkipRewards.css
@@ -3,14 +3,22 @@
   position: relative;
 }
 
-.skipRewards-container div {
+.skipRewards-container .skipRewards-wrapper {
   background-color: #ffead4;
-  display: flex;
+  display: grid;
+  grid-template-columns: 55vw auto;
+  grid-template-areas: 'col1 col2';
 }
 
-.skipRewards-container div .photo {
-  width: 690px;
-  max-width: 690px;
+@media screen and (max-width: 960px) {
+  .skipRewards-container .skipRewards-wrapper {
+    grid-template-areas: 'col2' 'col1';
+    grid-template-columns: auto;
+  }
+}
+
+.skipRewards-container .skipRewards-wrapper .photo {
+  grid-area: col1;
   height: 540px;
   z-index: 0;
   left: 0;
@@ -18,42 +26,64 @@
   bottom: 0;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: unset;
   clip-path: polygon(0 0, 100% 0, 78% 100%, 0% 100%);
 }
 
-.skipRewards-container div .text {
-  flex-grow: 1;
+@media screen and (max-width: 960px) {
+  .skipRewards-container .skipRewards-wrapper .photo {
+    clip-path: polygon(0 10%, 100% 0%, 100% 100%, 0% 100%);
+    width: auto;
+    max-width: 960px;
+    background-position: center;
+    height: 245px;
+  }
+}
+
+.skipRewards-container .skipRewards-wrapper .text {
+  grid-area: col2;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
 }
 
-.skipRewards-container div .text div {
+@media screen and (max-width: 960px) {
+  .skipRewards-container .skipRewards-wrapper .text {
+    padding: 0 34px;
+  }
+}
+
+.skipRewards-container .skipRewards-wrapper .text div {
   max-width: 468px;
+  display: flex;
   flex-direction: column;
 }
 
-.skipRewards-container div .text div .rewards-title {
+.skipRewards-container .skipRewards-wrapper .text div .rewards-title {
   margin: 0px 0px 20px;
   height: 30px;
   z-index: 2;
   align-items: start;
 }
 
-.skipRewards-container div .text div .rewards-title svg {
-  fill: #ff8000;
-  width: inherit;
-  height: inherit;
+@media screen and (max-width: 960px) {
+  .skipRewards-container .skipRewards-wrapper .text div .rewards-title {
+    align-items: center;
+    margin-top: 52px;
+  }
 }
 
-.skipRewards-container div .text div .rewards-text {
+.skipRewards-container .skipRewards-wrapper .text div .rewards-title svg {
+  fill: #ff8000;
+}
+
+.skipRewards-container .skipRewards-wrapper .text div .rewards-text {
   z-index: 2;
   margin-bottom: 32px;
 }
 
-.skipRewards-container div .text div .rewards-text span {
+.skipRewards-container .skipRewards-wrapper .text div .rewards-text span {
   max-width: 100%;
   padding: 0px;
   text-align: left;
@@ -66,17 +96,29 @@
   letter-spacing: 0;
 }
 
-.skipRewards-container div .text div .learn-more {
+@media screen and (max-width: 960px) {
+  .skipRewards-container .skipRewards-wrapper .text div .rewards-text span {
+    text-align: center;
+  }
+}
+
+.skipRewards-container .skipRewards-wrapper .text div .learn-more {
   z-index: 2;
   width: 167.11px;
 }
 
-.skipRewards-container div .text div .learn-more :hover {
+.skipRewards-container .skipRewards-wrapper .text div .learn-more :hover {
   background-color: #aa4c00;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 
-.skipRewards-container div .text div .learn-more a {
+@media screen and (max-width: 960px) {
+  .skipRewards-container .skipRewards-wrapper .text div .learn-more {
+    margin: 0 auto 40px auto;
+  }
+}
+
+.skipRewards-container .skipRewards-wrapper .text div .learn-more a {
   height: 60px;
   border-radius: 4px;
   text-align: center;
@@ -103,7 +145,7 @@
   text-decoration: none;
 }
 
-.skipRewards-container div .text div .learn-more a span {
+.skipRewards-container .skipRewards-wrapper .text div .learn-more a span {
   font-size: 0.9375rem;
   color: white;
   text-transform: uppercase;
