--- a/src/components/MainPage/style/Benefits.css
+++ b/src/components/MainPage/style/Benefits.css
@@ -31,8 +31,15 @@
 }
 
 .benefits-container .benefits-wrapper .text1 div {
+  width: 301px;
   z-index: 2;
   flex-direction: column;
+}
+
+@media screen and (max-width: 960px) {
+  .benefits-container .benefits-wrapper .text1 div {
+    width: 100%;
+  }
 }
 
 .benefits-container .benefits-wrapper .text1 div h2 {
