--- a/src/components/MainPage/style/DownloadOurApp.scss
+++ b/src/components/MainPage/style/DownloadOurApp.scss
@@ -1,39 +1,22 @@
 .downloadourapp-container {
   overflow: hidden;
   position: relative;
-  height: 564px;
 
-  div {
+  .downloadourapp-wrapper {
     background-color: #111b22;
-    display: flex;
+    // display: flex;
+    display: grid;
+    grid-template-columns: 55vw auto;
+    grid-template-areas: 'col1 col2';
 
-    .photo {
-      width: 0;
-      // align-items: flex-end;
-      height: 530px;
-      // width: 419px;
-      padding-top: 95px;
-
-      img {
-        // width: 470px;
-        // // height: 475px;
-        // // height: 475px;
-        // // width: 419px;
-        // // margin-top: 89px;
-        // padding-left: 470px;
-        // // padding-top: 100px;
-        // margin-right: 100px;
-        z-index: 3;
-
-        // margin-top: 89px;
-        // padding-left: 470px;
-        // margin-right: 100px;
-
-        transform: translateX(13vw);
-      }
+    @media screen and (max-width: 960px) {
+      grid-template-areas: 'col1' 'col2';
+      grid-template-columns: auto;
     }
 
     .leftBackground {
+      height: 564px;
+      grid-area: col1;
       width: 570px;
       max-width: 690px;
       z-index: 0;
@@ -41,20 +24,31 @@
       top: 0;
       bottom: 0;
       background-color: #0c151d;
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
       clip-path: polygon(0 0, 100% 0, 70% 100%, 0% 100%);
+
+      @media screen and (max-width: 960px) {
+        clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%);
+        width: auto;
+        max-width: 960px;
+        background-position: center;
+        height: 270px;
+      }
     }
 
     .text {
-      flex-grow: 1;
+      grid-area: col2;
       display: flex;
       // justify-content: center;
       align-items: center;
       justify-content: center;
       position: relative;
       color: #fff;
+
+      @media screen and (max-width: 960px) {
+        height: 285px;
+        padding-top: 100px;
+        text-align: center;
+      }
 
       div {
         max-width: 275px;
@@ -96,6 +90,34 @@
             height: 39.98px;
           }
         }
+      }
+    }
+  }
+  .photo {
+    position: absolute;
+
+    @media screen and (max-width: 960px) {
+      left: 50%;
+    }
+
+    .desktop-en {
+      height: 530px;
+      z-index: 3;
+      transform: translate(12vw, -470px);
+
+      @media screen and (max-width: 960px) {
+        display: none;
+      }
+    }
+
+    .mobile-en {
+      display: none;
+
+      @media screen and (max-width: 960px) {
+        display: block;
+        width: 230px;
+        z-index: 3;
+        transform: translate(-50%, -600px);
       }
     }
   }
