--- a/src/components/MainPage/style/Cards.css
+++ b/src/components/MainPage/style/Cards.css
@@ -1,19 +1,32 @@
 .cards-container {
-  height: 563px;
   background-color: #f9fafb;
 }
 
-.cards-container div {
+.cards-container .cards-wrapper {
   display: flex;
   justify-content: center;
 }
 
-.cards-container div .card {
+@media screen and (max-width: 960px) {
+  .cards-container .cards-wrapper {
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 20px;
+  }
+}
+
+.cards-container .cards-wrapper .card {
   margin: 64px 16px;
   text-align: left;
 }
 
-.cards-container div .card div {
+@media screen and (max-width: 960px) {
+  .cards-container .cards-wrapper .card {
+    margin: 20px 0 0 0;
+  }
+}
+
+.cards-container .cards-wrapper .card div {
   flex-direction: column;
   max-width: 314px;
   border-radius: 8px;
@@ -22,7 +35,14 @@
   position: relative;
 }
 
-.cards-container div .card div img {
+@media screen and (max-width: 600px) {
+  .cards-container .cards-wrapper .card div {
+    max-width: 100%;
+    border-radius: 0;
+  }
+}
+
+.cards-container .cards-wrapper .card div img {
   border-radius: 8px 8px 0 0;
   width: 100%;
   height: 180px;
@@ -33,13 +53,26 @@
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
 }
 
-.cards-container div .card div div {
+@media screen and (max-width: 600px) {
+  .cards-container .cards-wrapper .card div img {
+    border-radius: 0;
+    height: 180px;
+  }
+}
+
+.cards-container .cards-wrapper .card div div {
   padding: 32px;
   text-align: left;
   border-bottom: 1px solid #f1f2f4;
 }
 
-.cards-container div .card div div h3 {
+@media screen and (max-width: 600px) {
+  .cards-container .cards-wrapper .card div div {
+    text-align: center;
+  }
+}
+
+.cards-container .cards-wrapper .card div div h3 {
   font-size: 20px;
   font-family: CoreSans, sans-serif;
   font-weight: 500;
@@ -50,7 +83,7 @@
   margin: 0;
 }
 
-.cards-container div .card div div p {
+.cards-container .cards-wrapper .card div div p {
   max-width: 100%;
   transition: none;
   color: #5e6b77;
@@ -60,7 +93,7 @@
   letter-spacing: 0.00938em;
 }
 
-.cards-container div .card div button {
+.cards-container .cards-wrapper .card div button {
   width: 100%;
   height: 55px;
   font-weight: 600;
@@ -75,12 +108,12 @@
   background-color: transparent;
 }
 
-.cards-container div .card div button:hover {
+.cards-container .cards-wrapper .card div button:hover {
   background-color: #f2f2f2;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 
-.cards-container div .card div button a {
+.cards-container .cards-wrapper .card div button a {
   font-size: 15px;
   color: #5e6b77;
   text-decoration: none;
