--- a/src/components/MainPage/style/Cards.css
+++ b/src/components/MainPage/style/Cards.css
@@ -15,18 +15,18 @@
   }
 }
 
-.cards-container .cards-wrapper .card {
+.cards-container .cards-wrapper .card-wrapper {
   margin: 64px 16px;
   text-align: left;
 }
 
 @media screen and (max-width: 960px) {
-  .cards-container .cards-wrapper .card {
+  .cards-container .cards-wrapper .card-wrapper {
     margin: 20px 0 0 0;
   }
 }
 
-.cards-container .cards-wrapper .card div {
+.cards-container .cards-wrapper .card-wrapper .card {
   flex-direction: column;
   max-width: 314px;
   border-radius: 8px;
@@ -36,43 +36,52 @@
 }
 
 @media screen and (max-width: 600px) {
-  .cards-container .cards-wrapper .card div {
+  .cards-container .cards-wrapper .card-wrapper .card {
     max-width: 100%;
     border-radius: 0;
   }
 }
 
-.cards-container .cards-wrapper .card div img {
+.cards-container .cards-wrapper .card-wrapper .card .image-wrapper {
   border-radius: 8px 8px 0 0;
   width: 100%;
   height: 180px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center bottom;
   position: relative;
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
 }
 
 @media screen and (max-width: 600px) {
-  .cards-container .cards-wrapper .card div img {
+  .cards-container .cards-wrapper .card-wrapper .card .image-wrapper {
     border-radius: 0;
-    height: 180px;
   }
 }
 
-.cards-container .cards-wrapper .card div div {
+.cards-container .cards-wrapper .card-wrapper .card .image-wrapper img {
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center bottom;
+}
+
+@media screen and (max-width: 960px) {
+  .cards-container .cards-wrapper .card-wrapper .card .restaurants {
+    clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 80%);
+  }
+}
+
+.cards-container .cards-wrapper .card-wrapper .card .card-text {
   padding: 32px;
   text-align: left;
   border-bottom: 1px solid #f1f2f4;
 }
 
 @media screen and (max-width: 600px) {
-  .cards-container .cards-wrapper .card div div {
+  .cards-container .cards-wrapper .card-wrapper .card .card-text {
     text-align: center;
   }
 }
 
-.cards-container .cards-wrapper .card div div h3 {
+.cards-container .cards-wrapper .card-wrapper .card .card-text h3 {
   font-size: 20px;
   font-family: CoreSans, sans-serif;
   font-weight: 500;
@@ -83,7 +92,7 @@
   margin: 0;
 }
 
-.cards-container .cards-wrapper .card div div p {
+.cards-container .cards-wrapper .card-wrapper .card .card-text p {
   max-width: 100%;
   transition: none;
   color: #5e6b77;
@@ -93,7 +102,7 @@
   letter-spacing: 0.00938em;
 }
 
-.cards-container .cards-wrapper .card div button {
+.cards-container .cards-wrapper .card-wrapper .card button {
   width: 100%;
   height: 55px;
   font-weight: 600;
@@ -108,12 +117,12 @@
   background-color: transparent;
 }
 
-.cards-container .cards-wrapper .card div button:hover {
+.cards-container .cards-wrapper .card-wrapper .card button:hover {
   background-color: #f2f2f2;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 
-.cards-container .cards-wrapper .card div button a {
+.cards-container .cards-wrapper .card-wrapper .card button a {
   font-size: 15px;
   color: #5e6b77;
   text-decoration: none;
