--- a/src/components/MainPage/style/Hero.scss
+++ b/src/components/MainPage/style/Hero.scss
@@ -1,7 +1,9 @@
 .hero-container {
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
+  display: grid;
   height: 100vh;
+  justify-items: center;
 
   .backgroundImage {
     height: 100vh;
@@ -27,6 +29,11 @@
     max-width: 830px;
     transform: translateY(-50px);
 
+    @media screen and (max-width: 960px) {
+      margin: auto;
+      padding: 10px;
+    }
+
     .text {
       text-shadow: rgba(23, 32, 38, 0.2) 0px 2px 10px,
         rgba(23, 32, 38, 0.2) 0px 2px 4px;
@@ -48,6 +55,10 @@
         line-height: 1.3;
         letter-spacing: 0.5px;
         margin: 0;
+
+        @media screen and (max-width: 960px) {
+          font-size: 32px;
+        }
       }
     }
 
