--- a/src/components/MainPage/style/Hero.css
+++ b/src/components/MainPage/style/Hero.css
@@ -2,6 +2,7 @@
   display: grid;
   height: 100vh;
   justify-items: center;
+  grid-template-rows: auto 1fr;
 }
 
 .hero-container .backgroundImage {
@@ -48,7 +49,7 @@
   }
 }
 
-.hero-container .centerMenu .searchMenu {
+.hero-container .centerMenu form {
   align-items: center;
   background: #fff;
   border-radius: 4px 4px 0 0;
@@ -58,12 +59,12 @@
 }
 
 @media screen and (max-width: 960px) {
-  .hero-container .centerMenu .searchMenu {
+  .hero-container .centerMenu form {
     height: 60px;
   }
 }
 
-.hero-container .centerMenu .searchMenu .searchIcon {
+.hero-container .centerMenu form div {
   cursor: pointer;
   pointer-events: none;
   position: absolute;
@@ -79,13 +80,13 @@
 }
 
 @media screen and (max-width: 960px) {
-  .hero-container .centerMenu .searchMenu .searchIcon {
+  .hero-container .centerMenu form div {
     height: 26px;
     width: 26px;
   }
 }
 
-.hero-container .centerMenu .searchMenu form input {
+.hero-container .centerMenu form input {
   font-weight: 500;
   font-size: 20px;
   line-height: 28px;
@@ -101,13 +102,13 @@
 }
 
 @media screen and (max-width: 960px) {
-  .hero-container .centerMenu .searchMenu form input {
+  .hero-container .centerMenu form input {
     font-size: 14px;
     padding: 0 0 0 54px;
   }
 }
 
-.hero-container .centerMenu .searchMenu button {
+.hero-container .centerMenu form button {
   border: 0;
   cursor: pointer;
   display: inline-flex;
@@ -123,31 +124,26 @@
 }
 
 @media screen and (max-width: 960px) {
-  .hero-container .centerMenu .searchMenu button {
+  .hero-container .centerMenu form button {
     width: 48px;
   }
 }
 
-.hero-container .centerMenu .searchMenu button svg {
+.hero-container .centerMenu form button svg {
   height: 36px;
   width: 36px;
 }
 
 @media screen and (max-width: 960px) {
-  .hero-container .centerMenu .searchMenu button svg {
+  .hero-container .centerMenu form button svg {
     height: 26px;
     width: 26px;
   }
 }
 
-.hero-container .centerMenu .findRestaurantsInYourArea :hover {
-  background-color: #aa4c00;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-}
-
-.hero-container .centerMenu .findRestaurantsInYourArea button {
+.hero-container .centerMenu button {
   width: 100%;
-  height: 60px;
+  height: 72px;
   border-radius: 0 0 4px 4px;
   color: white;
   background-color: #f36d00;
@@ -162,8 +158,16 @@
   cursor: pointer;
   margin: 0;
   outline: 0;
+  font-size: 0.9375rem;
 }
 
-.hero-container .centerMenu .findRestaurantsInYourArea button span {
-  font-size: 0.9375rem;
+.hero-container .centerMenu button :hover {
+  background-color: #aa4c00;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+}
+
+@media screen and (max-width: 960px) {
+  .hero-container .centerMenu button {
+    height: 60px;
+  }
 }
