--- a/src/components/MainPage/style/Hero.scss
+++ b/src/components/MainPage/style/Hero.scss
@@ -2,6 +2,7 @@
   display: grid;
   height: 100vh;
   justify-items: center;
+  grid-template-rows: auto 1fr;
 
   .backgroundImage {
     height: 100vh;
@@ -43,7 +44,7 @@
       }
     }
 
-    .searchMenu {
+    form {
       align-items: center;
       background: #fff;
       border-radius: 4px 4px 0 0;
@@ -55,7 +56,7 @@
         height: 60px;
       }
 
-      .searchIcon {
+      div {
         cursor: pointer;
         pointer-events: none;
         position: absolute;
@@ -75,26 +76,24 @@
         }
       }
 
-      form {
-        input {
-          font-weight: 500;
-          font-size: 20px;
-          line-height: 28px;
-          letter-spacing: 0;
-          border: 0;
-          color: #162028;
-          overflow: hidden;
-          outline: 0;
-          padding: 0 0 0 74px;
-          text-overflow: ellipsis;
-          // width: 100%;
-          background: transparent;
-          min-height: 72px;
+      input {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 28px;
+        letter-spacing: 0;
+        border: 0;
+        color: #162028;
+        overflow: hidden;
+        outline: 0;
+        padding: 0 0 0 74px;
+        text-overflow: ellipsis;
+        // width: 100%;
+        background: transparent;
+        min-height: 72px;
 
-          @media screen and (max-width: 960px) {
-            font-size: 14px;
-            padding: 0 0 0 54px;
-          }
+        @media screen and (max-width: 960px) {
+          font-size: 14px;
+          padding: 0 0 0 54px;
         }
       }
 
@@ -128,7 +127,25 @@
       }
     }
 
-    .findRestaurantsInYourArea {
+    button {
+      width: 100%;
+      height: 72px;
+      border-radius: 0 0 4px 4px;
+      color: rgba(255, 255, 255, 1);
+      background-color: #f36d00;
+      text-align: center;
+      font-weight: 600;
+      line-height: 1.3;
+      white-space: normal;
+      letter-spacing: 1px;
+      min-width: 64px;
+      text-transform: uppercase;
+      border: 0;
+      cursor: pointer;
+      margin: 0;
+      outline: 0;
+      font-size: 0.9375rem;
+
       :hover {
         background-color: rgb(170, 76, 0);
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
@@ -136,27 +153,8 @@
           border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
       }
 
-      button {
-        width: 100%;
+      @media screen and (max-width: 960px) {
         height: 60px;
-        border-radius: 0 0 4px 4px;
-        color: rgba(255, 255, 255, 1);
-        background-color: #f36d00;
-        text-align: center;
-        font-weight: 600;
-        line-height: 1.3;
-        white-space: normal;
-        letter-spacing: 1px;
-        min-width: 64px;
-        text-transform: uppercase;
-        border: 0;
-        cursor: pointer;
-        margin: 0;
-        outline: 0;
-
-        span {
-          font-size: 0.9375rem;
-        }
       }
     }
   }
