--- a/src/components/MainPage/style/Navbar.css
+++ b/src/components/MainPage/style/Navbar.css
@@ -3,12 +3,12 @@
   background-color: transparent;
   height: 90px;
   display: flex;
-  margin: 0 15px 0 45px;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
 }
 
-.navbar-container .logo a svg {
+.navbar-container a svg {
   filter: drop-shadow(rgba(23, 32, 38, 0.2) 0px 2px 4px);
 }
 
