Fixed mobile navbar layout

--- a/src/components/MainPage/style/Hero.css
+++ b/src/components/MainPage/style/Hero.css
@@ -22,6 +22,7 @@
   margin: auto;
   width: 100%;
   max-width: 830px;
+  transform: translateY(-70px);
 }
 
 @media screen and (max-width: 960px) {
