--- a/src/components/MainPage/style/Hero.scss
+++ b/src/components/MainPage/style/Hero.scss
@@ -21,6 +21,7 @@
     margin: auto;
     width: 100%;
     max-width: 830px;
+    transform: translateY(-70px);
 
     @media screen and (max-width: 960px) {
       width: 90vw;
