--- a/src/components/MainPage/style/Navbar.css
+++ b/src/components/MainPage/style/Navbar.css
@@ -8,6 +8,12 @@
   width: 100%;
 }
 
+@media screen and (max-width: 960px) {
+  .navbar-container {
+    height: 72px;
+  }
+}
+
 .navbar-container a {
   margin-left: 20px;
 }
@@ -34,9 +40,17 @@
   cursor: pointer;
 }
 
-.navbar-container .menu .needHelp .icon {
+.navbar-container .menu .needHelp svg {
   height: 25px;
   width: 25px;
+}
+
+@media screen and (max-width: 960px) {
+  .navbar-container .menu .needHelp svg {
+    height: 35px;
+    width: 35px;
+    margin-right: 16px;
+  }
 }
 
 .navbar-container .menu .needHelp .text {
@@ -91,6 +105,12 @@
   position: relative;
   width: 35px;
   height: 35px;
+}
+
+@media screen and (max-width: 960px) {
+  .navbar-container .menu .login .icon {
+    margin-right: 20px;
+  }
 }
 
 .navbar-container .menu .login .icon img {
