--- a/src/components/MainPage/style/Navbar.scss
+++ b/src/components/MainPage/style/Navbar.scss
@@ -8,6 +8,10 @@
   justify-content: space-between;
   width: 100%;
 
+  @media screen and (max-width: 960px) {
+    height: 72px;
+  }
+
   a {
     margin-left: 20px;
     svg {
@@ -31,9 +35,15 @@
       white-space: normal;
       cursor: pointer;
 
-      .icon {
+      svg {
         height: 25px;
         width: 25px;
+
+        @media screen and (max-width: 960px) {
+          height: 35px;
+          width: 35px;
+          margin-right: 16px;
+        }
       }
 
       .text {
@@ -89,6 +99,10 @@
         position: relative;
         width: 35px;
         height: 35px;
+
+        @media screen and (max-width: 960px) {
+          margin-right: 20px;
+        }
 
         img {
           background-size: cover;
