--- a/src/components/MainPage/style/Hero.css
+++ b/src/components/MainPage/style/Hero.css
@@ -5,17 +5,6 @@
   grid-template-rows: auto 1fr;
 }
 
-.hero-container .backgroundImage {
-  height: 100vh;
-  width: 100%;
-  object-fit: cover;
-  position: absolute;
-  overflow: hidden;
-  opacity: 1;
-  transform: scale(1);
-  transform-origin: center center 0px;
-}
-
 .hero-container .centerMenu {
   z-index: 1;
   position: relative;
@@ -65,7 +54,7 @@
   }
 }
 
-.hero-container .centerMenu form div {
+.hero-container .centerMenu form svg {
   cursor: pointer;
   pointer-events: none;
   position: absolute;
@@ -81,7 +70,7 @@
 }
 
 @media screen and (max-width: 960px) {
-  .hero-container .centerMenu form div {
+  .hero-container .centerMenu form svg {
     height: 26px;
     width: 26px;
   }
@@ -171,4 +160,15 @@
   .hero-container .centerMenu button {
     height: 60px;
   }
+}
+
+.hero-container img {
+  height: 100vh;
+  width: 100%;
+  object-fit: cover;
+  position: absolute;
+  overflow: hidden;
+  opacity: 1;
+  transform: scale(1);
+  transform-origin: center center 0px;
 }
