--- a/src/components/MainPage/style/Hero.scss
+++ b/src/components/MainPage/style/Hero.scss
@@ -4,17 +4,6 @@
   justify-items: center;
   grid-template-rows: auto 1fr;
 
-  .backgroundImage {
-    height: 100vh;
-    width: 100%;
-    object-fit: cover;
-    position: absolute;
-    overflow: hidden;
-    opacity: 1;
-    transform: scale(1);
-    transform-origin: center center 0px;
-  }
-
   .centerMenu {
     z-index: 1;
     position: relative;
@@ -57,7 +46,7 @@
         height: 60px;
       }
 
-      div {
+      svg {
         cursor: pointer;
         pointer-events: none;
         position: absolute;
@@ -158,5 +147,16 @@
         height: 60px;
       }
     }
+  }
+
+  img {
+    height: 100vh;
+    width: 100%;
+    object-fit: cover;
+    position: absolute;
+    overflow: hidden;
+    opacity: 1;
+    transform: scale(1);
+    transform-origin: center center 0px;
   }
 }
