--- a/src/components/MainPage/style/NowServing.scss
+++ b/src/components/MainPage/style/NowServing.scss
@@ -5,10 +5,9 @@
   width: 100%;
   height: auto;
 
-  div {
-    margin: 0px auto;
-    width: 100%;
+  .nowserving-wrapper {
     max-width: 920px;
+    margin: 0px auto;
     padding-bottom: 32px;
     padding-top: 60px;
     display: flex;
@@ -25,7 +24,7 @@
       margin: 0;
     }
 
-    div {
+    .desktop-screen {
       margin: 36px 0px;
       flex: 1 1 0%;
       display: flex;
@@ -37,6 +36,23 @@
 
         g {
           cursor: pointer;
+        }
+      }
+    }
+
+    .mobile-screen {
+      div {
+        width: 100vw;
+        box-shadow: rgb(241, 242, 244) 0px 1px 0px 0px inset;
+        cursor: pointer;
+
+        p {
+          padding: 18px 16px;
+          font-size: 14px;
+          font-weight: 400;
+          letter-spacing: 0.00938em;
+          margin: 0;
+          color: rgb(12, 21, 29);
         }
       }
     }
