--- a/src/components/MainPage/style/PopularCuisines.scss
+++ b/src/components/MainPage/style/PopularCuisines.scss
@@ -1,5 +1,5 @@
 .popularcuisines-container {
-  min-height: 391.6px;
+  // min-height: 391.6px;
   background-color: #f9fafb;
 
   div {
@@ -8,6 +8,10 @@
     margin: 0px auto;
     width: 100%;
     max-width: 920px;
+
+    @media screen and (max-width: 960px) {
+      // padding: 7px 0 7px 16px;
+    }
 
     h6 {
       padding: 32px 0px 25px;
@@ -34,22 +38,43 @@
       display: flex;
       padding-left: 0;
 
+      @media screen and (max-width: 960px) {
+        max-height: 132px;
+      }
+
       li {
         margin: 0px 2px;
         padding: 2px 0px 0px 2px;
         cursor: pointer;
         list-style: outside none none;
+        width: 224px;
 
         a {
           div {
             border-radius: 4px;
             max-height: 142px;
-            width: 224px;
             background-size: cover;
-            background-color: rgb(10, 56, 71);
             background-repeat: no-repeat;
             background-position: center center;
             position: relative;
+
+            &::after {
+              content: '';
+              background: rgba(0, 0, 0, 0)
+                linear-gradient(
+                  rgba(255, 255, 255, 0) 15%,
+                  rgba(0, 0, 0, 0.6) 100%
+                )
+                repeat scroll 0% 0%;
+              position: absolute;
+              width: 100%;
+              height: 100%;
+            }
+
+            @media screen and (max-width: 960px) {
+              width: 109px;
+              max-height: 132px;
+            }
 
             p {
               left: 16px;
@@ -64,17 +89,6 @@
               margin: 0px;
               text-align: left;
               overflow: hidden;
-            }
-
-            div {
-              background: rgba(0, 0, 0, 0)
-                linear-gradient(
-                  rgba(255, 255, 255, 0) 15%,
-                  rgba(0, 0, 0, 0.6) 100%
-                )
-                repeat scroll 0% 0%;
-              position: absolute;
-              width: 100%;
             }
           }
         }
